cilium-cli/connectivity/builder/manifests/echo-ingress-from-other-client.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: echo-ingress-from-other-client
spec:
  description: "Allow other client to contact echo"
  endpointSelector:
    matchLabels:
      kind: echo
  ingress:
  - fromEndpoints:
    - matchLabels:
        other: client
      matchExpressions:
      - { key: io.cilium.k8s.policy.cluster, operator: Exists }
